# vermilion-bird

./: .gitignore  .todo_tasks.json  AGENTS.md  BUGFIX_SUMMARY.md  INSTALL.md  INSTALL_LARK_OAPI.md  README.md  SYSTEMD.md  build.sh  config.example.yaml  config.yaml  gui_entry.py  icon.icns  pkg_resources.py  pyproject.toml  requirements.txt  vermilion-bird.service  vermilion-bird.spec
.github/workflows/: build.yml
.pi/prompts/: release.md
.rpiv/artifacts/designs/: 2026-05-23_14-00-00_proactive-two-stage.md
.rpiv/artifacts/discover/: 2026-05-16_22-06-03_formal-pipeline-stage-abstraction.md
.sisyphus/: boulder.json
.sisyphus/drafts/: context-management-module.md
.sisyphus/evidence/: final-f1-compliance.txt  final-f2-code-quality.txt  final-f3-qa.txt  final-f4-scope-fidelity-v2.txt  final-f4-scope-fidelity.txt
.sisyphus/plans/: feishu-integration.md  scheduled-tasks.md  shell-exec-tool.md  system-optimization.md  task-delegator.md
.trae/: plan.md
.trae/documents/: architecture.md  builtin_search_plan.md  conversation_history_plan.md  llm_call_flow.md  llm_chat_plan.md  memory_system_optimization.md  memory_system_plan.md  model_params_plan.md  parallel_tool_execution_plan.md  search_optimization_plan.md  skills_extension_plan.md  web_fetch_anti_scraping_plan.md
deploy/: README.md  install.sh  vermilion-bird-chat.service  vermilion-bird.service
docs/: architecture-optimization.md  decision-first-design.md  decision-first-implementation-plan.md  domain-knowledge-design.md  ember-architecture.md  product-vision.md  卜卦历史与演变-大纲.md  卜卦历史与演变-完整文档.md  能力审计评估报告.md
hooks/: runtime-tiktoken.py
scripts/: release.sh
src/llm_chat/: __init__.py  app.py  chat_core.py  chat_core_graph.py  cli.py  client.py  config.py  conversation.py  exceptions.py  health.py  pkg_resources.py  service_manager.py  storage.py
tests/: conftest.py  test_app.py  test_chat_core_graph.py  test_chat_core_graph_integration.py  test_cli_schedule.py  test_client.py  test_config.py  test_context_management.py  test_context_types.py  test_conversation.py  test_feishu_adapter.py  test_feishu_cli.py  test_feishu_integration.py  test_feishu_logging.py  test_feishu_mapper.py  test_feishu_push.py  test_feishu_rate_limiter.py  test_feishu_server.py  test_feishu_signature.py  test_health.py  test_intent_classifier.py  test_knowledge_base_skill.py  test_knowledge_manager.py  test_knowledge_storage.py  test_multi_agent_integration.py  test_scheduled_tasks.py  test_service_manager.py  test_skills_shell_exec.py  test_storage.py  test_task_delegator.py
tests/ember-agent/: test_agent.py  test_consensus.py  test_peer.py  test_workflow.py
tests/ember-core/: test_async_graph.py  test_graph.py  test_tools.py
tests/integration/: conftest.py  test_scheduler_cli.py
tests/test_scheduler/: __init__.py  conftest.py  test_executor.py  test_models.py  test_scheduler.py
(+180 files in other folders)
