[tool.poetry]
name = "vermilion-bird"
version = "0.1.0"
description = "A simple LLM chat client with configurable settings and multi-protocol support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "llm_chat", from = "src"}]

[tool.poetry.scripts]
vermilion-bird = "llm_chat.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.0"
lark-oapi = "^1.0.0"
requests = "^2.31.0"
click = "^8.1.7"
PyQt6 = "^6.6.0"
markdown = "^3.5.0"
mcp = "^1.0.0"
httpx = "^0.27.0"
httpx-sse = "^0.4.0"
duckduckgo-search = "^6.0.0"
ddgs = "^9.0.0"
tiktoken = "^0.7.0"
beautifulsoup4 = "^4.12.0"
playwright = "^1.40.0"
apscheduler = "^3.9.1"
sqlalchemy = "^2.0.0"
trafilatura = "^1.7.0"
keyring = "^24.0.0"
jieba = { version = "^0.42.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv"]
